# mobile-use

./: .gitignore  .gitmodules  README.md  pyproject.toml  webui.py
benchmark/android_lab/: README.md  eval.py  generate_result.py  mobile_use_auto_test.py  mobile_use_executor.py
benchmark/android_lab/configs/: gpt-4o-linux-XML_template.yaml  mobile-use-MultiAgent_template.yaml  mobile-use-ReActAgent_template.yaml
benchmark/android_world/: README.md  calculate_result.py  emulator_service_monitor.sh  mobile_use_agent.py  mobile_use_agent_robust.py  run.py  script_for_linux.py  script_for_windows.py
docs/: AndroidWorld.md  README_zh.md
mobile_use/: adb_utils.py  environ.py  scheme.py  utils.py  webui.py
mobile_use/agents/: __init__.py  agent.py  agent_qwen.py  agent_qwen_with_summary.py  agent_react.py  base.py  multi_agent.py  sub_agent.py
tests/: test_environ.py  test_vlm.py
tests/agents/: test_agent.py
