[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobile-use"
version = "0.2.0"
description = "Mobile Use​: Automate your mobile with AI - Any app, any task."
authors = [
    {name = "zhoujiamu"},
    {name = "moxiaoyun"},
    {name = "lining"},
    {name = "pengqiuying"},
    {name = "quxiangmou"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "absl-py==2.1.0",
  "adbutils>=2.8.0,<3.0.0",
  "colorama>=0.4.6",
  "dm_env==1.6",
  "fuzzywuzzy==0.18.0",
  "google-generativeai==0.5.1",
  "gradio>=5.16.0,<6.0.0",
  "grpcio==1.70.0",
  "immutabledict==4.2.1",
  "IPython==8.32.0",
  "jsonschema==4.17.3",
  "matplotlib==3.6.1",
  "numpy==1.26.3",
  "openai==1.63.0",
  "opencv-python==4.11.0.86",
  "pandas==2.1.4",
  "portpicker==1.6.0",
  "pydub==0.25.1",
  "pygame==2.6.1",
  "pyregister==0.0.1",
  "python-dotenv>=1.0.1,<2.0.0",
  "python-Levenshtein==0.26.1",
  "requests==2.32.3",
  "tenacity==9.0.0",
  "termcolor==2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest >=8.1.1,<9"
]
